对应 issue #251 链接跳转修改

--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -74,6 +74,7 @@ function aremove(){
   $("#sign").removeAttr("onclick");
   $("#sign").attr('onMouseOver',null);
 }
+
 function goto(cid,aid,points){
     var w = window.open("","_blank");
     $.ajax({
@@ -97,24 +98,25 @@ function goto(cid,aid,points){
 
                       }
                       $(".image"+cid).removeAttr("onclick");
-                          $(".goTo "+cid).removeAttr("onclick");
-                          $.ajax({
-                                url: "{{ path('_checkin_clickInsert') }}?cid="+cid+"&aid="+aid,
-                                post: "GET",
-                                success:function(data){ 
-                                  var points = $("#points").text();
-                                  var obj = JSON.parse(data);
-                                  w.location.href = obj.url;
-                                  // w.focus();
-                                  // window.open(obj.url, "s", "resizable=yes, toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, copyhistory=no").blur();
-                                  // window.focus();
-                                  if(obj.code==1){  
-                                      $(".signInExplain").hide();
-                                      aremove();
-                                      $("#points").text(parseInt(obj.point)+parseInt(points));
-                                  }
-                                }
-                          });
+                      $(".goTo "+cid).removeAttr("onclick");
+                      $.ajax({
+                            url: "{{ path('_checkin_clickInsert') }}?cid="+cid+"&aid="+aid,
+                            post: "GET",
+                            success:function(data){ 
+                              var points = $("#points").text();
+                              var obj = JSON.parse(data);
+                              // w.location.href = obj.url;
+                              w.location.href = "{{ path('_checkin_checkinInfo') }}?aid="+aid;
+                              // w.focus();
+                              // window.open(obj.url, "s", "resizable=yes, toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, copyhistory=no").blur();
+                              // window.focus();
+                              if(obj.code==1){  
+                                  $(".signInExplain").hide();
+                                  aremove();
+                                  $("#points").text(parseInt(obj.point)+parseInt(points));
+                              }
+                            }
+                      });
                     }
                  });
               }else if(data==0){
@@ -161,10 +163,9 @@ function goto(cid,aid,points){
                <!-- <a class="personalBtn" href="{{ path('_user_info')}}"><img src="{{ asset('images/myCenterBtn.png') }}"/></a>--></p>
                 <p class="point">米粒：<span id="points">{{ user.points }}</span></p>
 
-                 <!--<div class="clear"></div>
+                 <!-- <div class="clear"></div>
                   <a class="signIn" id="sign" onclick="signs();" onMouseOver="popIn();" onMouseOut="popOut();"></a>
-                  <div class="signInExplain">打开<span id="m_remain">3</span>个商城就可获得<span>{{ checkinPoint }}</span>个积分！</div>-->
-               
+                  <div class="signInExplain">打开<span id="m_remain">3</span>个商城就可获得<span>{{ checkinPoint }}</span>个积分！</div> -->
                 <a class="signWait"></a>
                 <div class="clear"></div>
             </div>
