对应 issue #251 放开签到功能

--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -163,10 +163,10 @@ function goto(cid,aid,points){
                <!-- <a class="personalBtn" href="{{ path('_user_info')}}"><img src="{{ asset('images/myCenterBtn.png') }}"/></a>--></p>
                 <p class="point">米粒：<span id="points">{{ user.points }}</span></p>
 
-                 <!-- <div class="clear"></div>
+                 <div class="clear"></div>
                   <a class="signIn" id="sign" onclick="signs();" onMouseOver="popIn();" onMouseOut="popOut();"></a>
-                  <div class="signInExplain">打开<span id="m_remain">3</span>个商城就可获得<span>{{ checkinPoint }}</span>个积分！</div> -->
-                <a class="signWait"></a>
+                  <div class="signInExplain">打开<span id="m_remain">3</span>个商城就可获得<span>{{ checkinPoint }}</span>个积分！</div>
+                <!-- <a class="signWait"></a> -->
                 <div class="clear"></div>
             </div>
             <ul>
