--- a/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
@@ -48,14 +48,17 @@ $(document).ready(function() {
 function change(){
 		if($("#over").html()>=0){
       var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+      var mobile = /^1[3|5][0-9]\d{4,8}$/;
       if(existAlipay=='' || $("#existAlipay").val()!=''){
         if($("#alipay").val()==''){
             $("#error").html("<font color='red'>请输入您的支付宝账号</font>");
             return false;
         }
         if(!filter.test($("#alipay").val())){
-            $("#error").html("<font color='red'>支付宝账号应是邮件格式</font>");
-            return false;
+            if(!mobile.test($("#alipay").val())){
+              $("#error").html("<font color='red'>支付宝账号应是邮件格式或手机格式</font>");
+              return false;
+            }
         }
         if($("#alipay").val()!=$("#re_alipay").val()){
           $("#error").html("<font color='red'>2次输入的支付宝账号不相同</font>");
