--- a/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
@@ -48,7 +48,7 @@ $(document).ready(function() {
 function change(){
 		if($("#over").html()>=0){
       var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-      var mobile = /^1[3|5][0-9]\d{4,8}$/;
+      var mobile = /^1[3|5|8][0-9]\d{4,8}$/;
       if(existAlipay=='' || $("#existAlipay").val()!=''){
         if($("#alipay").val()==''){
             $("#error").html("<font color='red'>请输入您的支付宝账号</font>");
