--- a/src/Jili/ApiBundle/Resources/views/Exchange/indentityConfirm.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/indentityConfirm.html.twig
@@ -39,6 +39,7 @@ function change(){
       <div class="btnArea mt50"><img id="active" onclick="change();" src="{{ asset('images/changeEnterBtn.jpg')}}" width="175" height="60"></div>
     </div>
   </article>
+  <input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
   </form>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
