--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -56,6 +56,7 @@ function alipayClick(){
 	<a class="exchangeBtn alipayBtn" id="alipayBtn">立即兑换</a>
 	<a class="exchangeBtn mobileBtn" id="mobileBtn">立即兑换</a>
 	<img src="{{ asset('images/exchangeContent.jpg')}}" width="813" height="270"><img src="{{ asset('images/exchangeFuture.jpg')}}">
+	<input type="hidden" value="btn" name="btn" />
 	<input type="hidden" value="{{ key }}" name="tokenKey" />
 	</div>
 	
