对应 issue #253 去掉兑换91问问按钮

--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -50,7 +50,7 @@ function alipayClick(){
 
 	<div class="about">
 	<a class="historyExchange" href="{{  asset(path('_user_exchange',{'type': 0,'exchangeType':1}),'cdn1') }}"></a>
-	<a class="close wenwen">停止兑换</a>
+	<!-- <a class="close wenwen">停止兑换</a> -->
 	<!-- <a class="await mobiel">即将开放</a> -->
 	<a class="exchangeBtn amazonBtn" id="amazonBtn">立即兑换</a>
 	<a class="exchangeBtn alipayBtn" id="alipayBtn">立即兑换</a>
