--- a/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
@@ -108,7 +108,7 @@ function changePoint(){
         <dt><input id="re_alipay" type="text" name="re_alipay" /></dt>
         <dd>姓名：</dd>
         <dt>{{ existRealName }}</dt>
-        <dt><input id="real_name" type="text" name="real_name"  onkeyup="value=value.replace(/[^\u4E00-\u9FA5]/g,'')"/></dt>
+        <dt><input id="real_name" type="text" name="real_name" /></dt>
         <dd>&nbsp;</dd><dt style="color: #EA4B11;">请填写真实姓名与支付宝匹配，否则有可能兑换失败</dt>
         <dd>选择兑换金额：</dd>
         <dt><select id="point" name="point"  onchange="changePoint();">
