--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -1,7 +1,9 @@
 <link href="{{ asset('css/game_prompt.css')}}" rel="stylesheet" type="text/css"/>
 <link href="{{ asset('css/personal.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/amazon.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/menu.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/bottom.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/newIndex.js')}}" type="text/javascript"></script>
 <script>
 $(document).ready(function(){
   $('.amazon').hide();
@@ -268,11 +270,9 @@ function selectCity_amazon(){
         <li><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">体验广告</a></li>
         <li><a href="{{ asset(path('_shopping_list'),'cdn1') }}">购物返利</a></li>
         <li><a href="{{ asset(path('_marketActivity_index'),'cdn1')  }}">商家活动</a><span class="new"></span></li>
-        <li><a href="{{ asset(path('_exchange_index'),'cdn1')  }}">兑换中心</a></li>
-        <li class="last"><a href="{{ asset(path('_default_support'),'cdn1')  }}">帮助中心</a></li>
+        <li class="last"><a href="{{ asset(path('_exchange_index'),'cdn1')  }}">兑换中心</a></li>
       </ul>
     </nav>
-  
     {% include 'JiliApiBundle:Default:info.html.twig' %}
 
   </section>
@@ -350,8 +350,6 @@ function selectCity_amazon(){
               <input name='update' type='button' value='保存' class='infoFinish'>
           </dt>
         </li>
-
-
       </ul>
     </div>
 </form>
