--- a/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
@@ -2,53 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>积粒网</title>
+<title>积粒网-购物返利</title>
 <link href="{{ asset('css/cpsActivity.css') }}" rel="stylesheet" type="text/css">
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script>
-var firstUrl = "{{ firstUrl | raw }}";
-var lastUrl = "{{ lastUrl | raw }}";
-var type = "{{ type }}";
-{% if app.session.get('uid') %}
-	var u = "{{ app.session.get('uid') }}";
-{% else %}
-	var u = "";
-{% endif %}
 $(document).ready(function(){
-	init(u,type);
-	
-}); 
-function goto(type){
-	switch(type){
-		case 1:
-			window.location.href = firstUrl; //cps
-		break;
-		case 2:
-			window.location.href = lastUrl; //shop
-		break;
-	}
+	 {% if app.session.get('uid') %}
+	 {% else %}
+	 	window.location.href="{{ path('_user_login') }}";
+     {% endif %}
+});
+function onloadfinish(){
+	window.location.href='{{ yixun | raw }}';
 
-}
-			
-function onloadfinish(type){
-	goto(type);
-}
-
-function init(u,type){
-	if(u){
-		$("#iframe").attr({
-		 	src: firstUrl
-		});
-	}else{
-		window.location.href = "{{ path('_user_login') }}";
-	}
-
-}
-
+}	
 </script>
 </head>
 <body>
-<iframe id="iframe" onload="onloadfinish({{ type }})" name="iframe" style="display:none;"></iframe>
+<iframe id="iframe" src="{{ yixun | raw }}" onload="onloadfinish()" name="iframe" style="display:none;"></iframe>
 <div class="loadingFrame">
 	<p class="logo"><img src="{{ asset('images/logo.gif') }}"></p>
 	<p>积粒网正在为您跳转，请稍等...</p>
